[package]
name = "dstl"
version = "0.2.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "6.0.0"
eyre = "0.6.12"
fuzzy-matcher = "0.3.7"
libc = "0.2.177"
nerd-font-symbols = "0.3.0"
once_cell = "1.21.3"
regex = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ratatui = "0.29.0"
rune-cfg = "0.1.33"
